--- a/Develop/style.css
+++ b/Develop/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -23,6 +23,10 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+}
+
+.container {
+  padding-top: 30px;
 }
 
 .time-block{
@@ -57,7 +61,7 @@ textarea{
   color: white;
 }
 
-.saveBtn {
+.saveButton {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -65,7 +69,7 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
+.saveButton i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
