changed button css

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -44,6 +44,7 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  text-align: center;
 }
 
 .past {
@@ -72,4 +73,9 @@ textarea {
 .saveButton i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+  color: black
+}
+
+.fas {
+  padding: 20px;
 }
